stateDiagram-v2
    direction LR

    [*] --> Pending
    Pending --> Started : .then()
    Pending --> Started : .start()
    Started --> state=FULFILLED : computation returns
    state=FULFILLED --> Fulfilled
    Started --> state=REJECTED : computation throws
    state=REJECTED --> Rejected
    Pending --> Cancelled : cancel
    Started --> Cancelled : cancel
    Cancelled --> Rejected

    state Pending {
      [*] --> state=PENDING
      state=PENDING --> [*]
    }

    state Started {
      [*] --> state=STARTED
      state=STARTED --> NotifyStarted
      NotifyStarted --> [*]
      NotifyStarted : Notify onStart
    }
    state Fulfilled {
      [*] --> NotifyFulfilled
      NotifyFulfilled --> [*]
      NotifyFulfilled : Notify onFullfilled
    }

    state Rejected {
      [*] --> NotifyRejected
      NotifyRejected --> [*]
      NotifyRejected : Notify onRejected
    }

    state Cancelled {
      [*] --> state=CANCELLED
      state=CANCELLED --> NotifyCancelled
      NotifyCancelled --> [*]
      NotifyCancelled: Notif onCancelled
    }
